[gd_scene load_steps=6 format=3 uid="uid://tdhjrs5j5h33"]

[ext_resource type="Script" uid="uid://bom7hv824eqt3" path="res://scenes/win_screen/win_screen.gd" id="1_misvs"]
[ext_resource type="Texture2D" uid="uid://cpydvk8mq66o5" path="res://art/tile_0087.png" id="3_h14ad"]

[sub_resource type="Gradient" id="Gradient_otr3d"]
offsets = PackedFloat32Array(0, 0.99624765)
colors = PackedColorArray(0.7058824, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8ekit"]
gradient = SubResource("Gradient_otr3d")
width = 50

[sub_resource type="LabelSettings" id="LabelSettings_mswbi"]
line_spacing = 6.0
font_size = 12
shadow_size = 4
shadow_color = Color(0.31431612, 0.31431612, 0.3143161, 1)

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_misvs")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_8ekit")

[node name="CharacterPortrait" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -30.0
offset_right = -21.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_h14ad")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -32.0
offset_right = 82.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Message" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "The Warrior
is victorious!"
label_settings = SubResource("LabelSettings_mswbi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(60, 14)
layout_mode = 2
size_flags_horizontal = 4
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
